syntax ="proto3";
import "pb_enum/enum.proto";
import "pb_msg/msg.proto";
package pb_chat_msg;
option go_package = "./pb_chat_msg;pb_chat_msg";

message GetChatMessagesReq {
  pb_enum.CHAT_TYPE chat_type = 1;
  int64 chat_id = 2;
  int64 seq_id = 3;
  int64 msg_ts = 4;
  int32 limit = 5;
  bool new = 6;
}

message GetChatMessagesResp {
  int32 code = 1;
  string msg = 2;
  repeated pb_msg.SrvChatMessage list = 3;
}

service ChatMessage {
  rpc GetChatMessages(GetChatMessagesReq) returns(GetChatMessagesResp);
}